Cambio de fuente de html

--- a/Canciones/cantare_al_señor_por _siempre.html
+++ b/Canciones/cantare_al_señor_por _siempre.html
@@ -3,15 +3,16 @@
 <head>
     <link
       rel="stylesheet"
-    href="../style.css">
-   
-</head>
-  
-  <body>
+     href="../style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Text:ital@0;1&family=Dancing+Script:wght@400..700&family=Pacifico&family=Paytone+One&family=Poetsen+One&family=Protest+Revolution&display=swap" rel="stylesheet">
     
-    <p id="titulo">  Cantaré al señor por siempre </p>
-    <p id="subtitulo">  Marcos Barrientos </p>
-    <pre><div></div>              <a>Em</a>              <a>Am</a>
+  <body class="amaranth-regular-italic">
+    
+    <p class="titulo">  Cantaré al señor por siempre </p>
+    <p class="subtitulo">  Marcos Barrientos </p>
+    <pre class="amaranth-regular-italic"><div></div>              <a>Em</a>              <a>Am</a>
         Cantaré al Señor por siempre,
         <div></div>            <a>C</a>         <a>B7</a>      <a>Em</a>
         Su diestra es todo poder. (X2)
