--- a/Canciones/en_los_montes.html
+++ b/Canciones/en_los_montes.html
@@ -5,10 +5,13 @@
     <link
       rel="stylesheet"
     href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Flavors&display=swap" rel="stylesheet">
    
 </head>
   
-  <body>
+  <body class="autour-one-regular">
     <p id="titulo">  En los montes, en los valles </p>
     <p id="subtitulo">  Marcos Witt </p>
      
@@ -16,7 +19,7 @@
   <div id="t_body">
     
 
-<pre><div></div>Intro:    ////<a>Dm</a> - <a>Bb</a> - <a>A</a>////
+<pre class="autour-one-regular"><div></div>Intro:    ////<a>Dm</a> - <a>Bb</a> - <a>A</a>////
 
 
     <div></div>    <a>Dm</a>                  <a>Bb</a>        <a>A</a>
