--- a/Canciones/hossana.html
+++ b/Canciones/hossana.html
@@ -7,13 +7,13 @@
    
 </head>
   
-  <body>
+  <body class="edu-sa-beginner-<uniquifier>">
     <p id="titulo">  Hossana </p>
     <p id="subtitulo">  Marcos Barrientos</p>
      
     
   <div id="t_body">
-    <pre>Into; //// B - A - F# - G ////
+    <pre class="edu-sa-beginner-<uniquifier>"  >Into; //// B - A - F# - G ////
 
       <div></div>      <a>Bm</a>             <a>A</a>
       Levantamos un clamor
