--- a/Canciones/la_tierra_canta.html
+++ b/Canciones/la_tierra_canta.html
@@ -4,16 +4,19 @@
     <link
       rel="stylesheet"
     href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Flavors&display=swap" rel="stylesheet">
    
 </head>
   
-  <body>
+  <body class="barriecito-regular">
     <p id="titulo"> La tierra canta</p>
     <p id="subtitulo"> Barack</p>
      
     
   <div id="t_body">
-    <pre><div></div>        <a>Bm</a>                       <a>G</a>                      <a>D</a>    <a>A</a>
+    <pre class="barriecito-regular"><div></div>        <a>Bm</a>                       <a>G</a>                      <a>D</a>    <a>A</a>
         Se abren los Cielos, se escucha un sonido celestial
         <div></div>        <a>Bm</a>                   <a>G</a>                       <a>D</a>       <a>A</a>
         Unido a las voces, de un pueblo que te quiere adorar
