--- a/Canciones/ya_no_soy_esclavo.html
+++ b/Canciones/ya_no_soy_esclavo.html
@@ -4,15 +4,18 @@
     <link
       rel="stylesheet"
     href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Estonia&family=Flavors&family=Poetsen+One&display=swap" rel="stylesheet">
    
 </head>
   
-  <body>
+  <body class="estonia-regular">
     <p id="titulo"> Ya no soy escalvo el temor</p>
     <p id="subtitulo"> Julio Melgar</p>
      
   <div id="t_body">
-    <pre>Para mayor comodidad, en esta colaboración se utiliza un cejillo o
+    <pre  class="estonia-regular">Para mayor comodidad, en esta colaboración se utiliza un cejillo o
         capo traste en el primer traste de nuestra guitarra
         
         (si no tienes capo traste basta con bajar medio tono estos acordes
