--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link
       rel="stylesheet"
     href="style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Text:ital@0;1&family=Dancing+Script:wght@400..700&family=Pacifico&family=Paytone+One&family=Poetsen+One&family=Protest+Revolution&display=swap" rel="stylesheet">
+    </head>
   
   <body>
    
-    <div id="fondo-div">
+    <div class="amaranth-regular-italic">
     <h1>Lista de canciones</h1>
-    <div class="box">
+    <div class="amaranth-regular-italic">
+    <nav class="nav">
       <ol>
        <li><a href="./Canciones/cantare_al_señor_por _siempre.html"> Cantaré al señor por siempre</a></li>
        <li><a href="./Canciones/danzando_en_cada_temporada.html"> Danzando en cada temporada</a></li>
@@ -23,6 +27,7 @@
        <li><a href="./Canciones/quien_como_el.html">Quien como el </a></li>
        <li><a href="./Canciones/ya_no_soy_esclavo.html">Ya no soy esclavo </a></li>
       </ol>
+    </nav>
     </div>
  </body>
   
