--- a/Canciones/danzando_en_cada_temporada.html
+++ b/Canciones/danzando_en_cada_temporada.html
@@ -4,16 +4,19 @@
     <link
       rel="stylesheet"
     href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Flavors&display=swap" rel="stylesheet">
    
 </head>
   
-  <body>
+  <body class="flavors-regular">
     <p id="titulo">  Danzando en cada temporada</p>
     <p id="subtitulo">  Gateway Worship </p>
      
     
   <div id="t_body">
-    <pre><div></div>       INTRO: <a>Bm</a> <a>G</a> <a>D</a> <a>A</a> <a>Bm</a> <a>G</a>
+    <pre class="flavors-regular"><div></div>       INTRO: <a>Bm</a> <a>G</a> <a>D</a> <a>A</a> <a>Bm</a> <a>G</a>
 
         VERSO 1
         <div></div>        <a>A</a>             <a>Bm</a> <a>G</a>
