--- a/Canciones/quien_como_el.html
+++ b/Canciones/quien_como_el.html
@@ -4,16 +4,18 @@
     <link
       rel="stylesheet"
     href="../style.css">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Flavors&family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
   
-  <body>
+  <body class="poetsen-one-regular">
     <p id="titulo"> Quién como el</p>
     <p id="subtitulo">Natalie Billini</p>
      
     
   <div id="t_body">
-    <pre><div></div>        Intro: // <a>Em</a>(4)  <a>SOLmaj7</a> (4)   <a>Cmaj7</a> (4)   <a>Dsus4</a> (2)     <a>D</a> (2) //
+    <pre class="poetsen-one-regular"><div></div>        Intro: // <a>Em</a>(4)  <a>SOLmaj7</a> (4)   <a>Cmaj7</a> (4)   <a>Dsus4</a> (2)     <a>D</a> (2) //
 
         Estrofa:
         <div></div>       <a>Em</a>          <a>B7</a>   <a>C</a>                 <a>G</a>       <a>D/F#</a>    <a>Em</a>
