Catualización de fuentes

--- a/Canciones/ya_no_soy_esclavo.html
+++ b/Canciones/ya_no_soy_esclavo.html
@@ -5,17 +5,16 @@
       rel="stylesheet"
     href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Barriecito&family=Edu+SA+Beginner:wght@400..700&family=Estonia&family=Flavors&family=Poetsen+One&display=swap" rel="stylesheet">
-   
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Text:ital@0;1&family=Dancing+Script:wght@400..700&family=Pacifico&family=Paytone+One&family=Poetsen+One&family=Protest+Revolution&display=swap" rel="stylesheet">
 </head>
   
-  <body class="estonia-regular">
+  <body class="amaranth-regular-italic">
     <p id="titulo"> Ya no soy escalvo el temor</p>
     <p id="subtitulo"> Julio Melgar</p>
      
   <div id="t_body">
-    <pre  class="estonia-regular">Para mayor comodidad, en esta colaboración se utiliza un cejillo o
+    <pre  class="amaranth-regular-italic">Para mayor comodidad, en esta colaboración se utiliza un cejillo o
         capo traste en el primer traste de nuestra guitarra
         
         (si no tienes capo traste basta con bajar medio tono estos acordes
